# modern-python-boilerplate

./: .bumpversion.cfg  CHANGELOG.md  LICENSE.rst  README.md  pyproject.toml  tasks.py
.github/workflows/: constraints.txt  docs.yml  linting.yml  release-drafter.yml  release_pypi.yml  tests.yml
docs/: conf.py  index.rst  installation.rst  requirements.txt  usage.rst
src/modern_python_boilerplate/: __init__.py  cli.py
tests/: __init__.py  test_cli.py  test_modern_python_boilerplate.py
